buildroot-0.1.0 2007-03-09 <spudmonkey@racsa.co.cr>

	Support for arm-elf toolchain

buildroot-0.1.1 (revision number not used)

buildroot-0.1.2 2008-11-06 <spudmonkey@racsa.co.cr>

	* Add support for m68k-elf and m68hc11 toolchain
	* Add patch to build older binutils with newer Texinfo version
	* Add support for SH-1 toolchain

buildroot-0.1.3 2009-02-28 <spudmonkey@racsa.co.cr>

	* Add support for H8/300 toolchain
	* Add support for GCC 4.2.4 and binutils 2.19
	* Various fixes for newer Linux environments
	* New ARM configuration using GCC 4.2.4 and binutils 2.19
	* Add Renesas R8C/M16C/M32C configuration using GCC 4.2.4 and binutils 2.19

buildroot-0.1.4 2009-04-19 <spudmonkey@racsa.co.cr>

	* Add support for a blackfin toolchain using GCC 4.2.4 and binutils 2.19
	* GCC 4.2.4 no longer attempts to build libstdc++.  Now we can build g++!
	* The ARM GCC-4.2.4 configuration was changed so that it now builds g++.
	* Removed building of initial and final GCC.  that is not necessary because
	  we do not build a libc.  Now it builds almost twice as fast.
	* Removed logic to build the target GCC.  That is never used.

buildroot-0.1.5 2009-xx-xx <spudmonkey@racsa.co.cr>